--- a/.gh-dash.yml
+++ b/.gh-dash.yml
@@ -1,77 +1,9 @@
 # yaml-language-server: $schema=https://gh-dash.dev/schema.json
 prSections:
   - title: Mine
-    filters: repo:dlvhdr/gh-enhance is:open author:@me updated:>={{ nowModify "-3w" }}
+    filters: repo:dlvhdr-insiders/gh-enhance is:open author:@me updated:>={{ nowModify "-3w" }}
     layout:
       author:
         hidden: true
-
-pager:
-  diff: diffnav
-
 showAuthorIcons: true
-
-defaults:
-  view: prs
-  refetchIntervalMinutes: 5
-  layout:
-    prs:
-      repoName:
-        grow: true,
-        width: 10
-        hidden: false
-      base:
-        hidden: true
-
-  preview:
-    open: true
-    width: 70
-  prsLimit: 20
-  issuesLimit: 20
-
-keybindings:
-  universal:
-    - key: g
-      name: lazygit
-      command: >
-        cd {{.RepoPath}} && lazygit
-  prs:
-    - key: O
-      builtin: checkout
-    - key: T
-      command: >
-        tmux new-window -c /Users/dlvhdr/code/personal/gh-enhance '
-        task local-gh -- -R {{.RepoName}} {{.PrNumber}}
-        '
-    - key: C
-      name: code review
-      command: >
-        tmux new-window -c {{.RepoPath}} '
-        nvim -c ":silent Octo pr edit {{.PrNumber}}"
-        '
-    - key: v
-      name: approve
-      command: >
-        gh pr review --repo {{.RepoName}} --approve --body "$(gum input --prompt='Approval Comment: ')" {{.PrNumber}}
-
-theme:
-  ui:
-    sectionsShowCount: true
-    table:
-      compact: false
-  colors:
-    text:
-      primary: "#E2E1ED"
-      secondary: "#666CA6"
-      inverted: "#242347"
-      faint: "#B0B3BF"
-      warning: "#E0AF68"
-      success: "#3DF294"
-    background:
-      selected: "#1B1B33"
-    border:
-      primary: "#383B5B"
-      secondary: "#39386B"
-      faint: "#2B2B40"
-
 smartFilteringAtLaunch: false
