--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -17,6 +17,11 @@ tasks:
     interactive: true
     desc: Run in debug mode. Run `task logs` to watch the logs.
 
+  dlv:
+    cmds:
+      - dlv debug --headless --api-version=2 --listen=127.0.0.1:43000 . -- {{.CLI_ARGS}}
+    desc: Debug with dlv
+
   local-gh:
     cmds:
       - printf "~\n~\n~\n~\n~\n~\n~\n~\n~\n~\n~\n~\n~\n~\n~\n―――――――――――――――――――――――――――――――――――――――――――――――\n" > ./debug.log
